Fix hero buttons stuck together on narrow screens

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -24,12 +24,11 @@
 }
 
 .home-buttons {
-  margin-top: 2rem;
-  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
 
   .button {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 0.5rem 1rem;
   }
 }
 
